# fisherscreen

./: .env.example  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Projektstand.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  errors.py  logging_config.py  main.py
app/deepdive/: __main__.py  adr_resolver.py  adr_table.py  anchor_resolver.py  compose.py  dossier_generator.py  eu_adr_resolution.py  filing_cache.py  filing_parser.py  fisher_points.py  historical_cache.py  insider_block.py  insider_cache.py  insider_parser.py  insider_summary.py  peer_preflight.py  peer_quant.py  pipeline.py  quant_join.py  synthesis.py  trend_metrics.py  valuation_block.py  valuation_history.py
app/models/: deep_dive_record.py  definedness.py  run_record.py  screener_record.py
app/output/: changes_generator.py  crosshits_generator.py  dimensions_generator.py  funnel_artifacts.py  report_header.py
app/screener/: bucket_acceptance.py  compose.py  deterministic_scorer.py  dimensions.py  filter_report.py  filters.py  funnel.py  growth_consistency.py  industry_group_map.py  metric_definedness.py  percentiles.py  revenue_trajectory.py  run_tracker.py  runner.py  scorer.py  sector_buckets.py  (+3 more)
data/: adr_table.json  gics_industry_group_map.json  universe.json
docs/: negative-filters-status.md
infra/: budget_stop.py  main.py  requirements.txt
scripts/: __init__.py  acceptance_adr_resolution.py  acceptance_basis_filter.py  acceptance_deepdive.py  analyze_sector_relative_evidence.py  apply_corrections_to_universe.py  audit_funnel.py  audit_independent_resolution.py  backfill_revenue_series.py  backfill_verify.py  build_universe.py  calibrate_anchor_bands.py  diagnose_0a_acceptance.py  diagnose_0b_acceptance.py  diagnose_bucket_dispersion.py  diagnose_canary_fx.py  diagnose_gateB_additivity.py  diagnose_gross_margin_definedness.py  diagnose_industry_histogram.py  diagnose_k_calibration.py  diagnose_newly_caught.py  diagnose_p1_gateB_acceptance.py  diagnose_p1_survivor_split.py  diagnose_price_units.py  diagnose_revenue_growth_drops.py  diagnose_sector_median_table.py  diagnose_survivor_value_histogram.py  diagnose_symbol_contaminants.py  diagnose_value_floor_calibration.py  diagnose_volume_review.py  inspect_going_concern_hits.py  invalidate_edgar_going_concern_cache.py  local_acceptance_run.py  preflight_adr_resolution.py  preflight_gemini_pro.py  probe_distressed_going_concern.py  purge_edgar_cache_all.py  purge_gemini_scores_all.py  purge_ticker_cache_all.py  resolve_universe_symbols.py  (+6 more)
tests/: conftest.py  test_acceptance_deepdive.py  test_build_universe.py  test_config.py  test_errors.py  test_gitignore_build_context.py  test_logging_config.py  test_main.py  test_output_write_guard.py  test_service_stubs.py
(+237 files in other folders)
