[project]
name = "fisherscreen"
version = "0.1.0"
description = "Phil Fisher stock screener applying 15 principles to public data"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4.0",
    "yfinance>=0.2.50",
    "httpx>=0.27.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=2.2.0",
    "python-frontmatter>=1.1.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
    "lxml>=6.1.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
fisherscreen = "app.deepdive.__main__:main"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
markers = [
    "integration: integration tests requiring real APIs",
]

[tool.coverage.run]
omit = [
    "app/services/*",
]

[tool.coverage.report]
exclude_lines = [
    "\\.\\.\\.",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
