[project]
name = "fisherscreen"
version = "0.1.0"
description = "Phil Fisher stock screener applying 15 principles to public data"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.4.0",
    "yfinance>=0.2.50",
    "httpx>=0.27.0",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=2.2.0",
    "python-frontmatter>=1.1.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.32.0",
    "lxml>=6.1.0",
    "html2text>=2024.2.26",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.uv]
# dev is a default group so `uv sync` / `uv run python -m pytest` work
# without --group/--extra flags (SOPRA-EPDR: see CLAUDE.md). For a
# production build (Cloud Run, B.5+) pass --no-default-groups.
default-groups = ["dev"]

[project.scripts]
fisherscreen = "app.deepdive.__main__:main"

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"
markers = [
    "integration: tests requiring real APIs or the never-committed local filing cache (cache/filings/, ADR-4); excluded in CI via -m 'not integration', run locally where the cache is populated",
    "allow_output_write: opt-in marker for tests that intentionally write to the real output/ directory (rare, e.g. integration smoke tests). Caller is responsible for cleanup.",
]

[tool.coverage.run]
omit = [
    "app/services/*",
]

[tool.coverage.report]
exclude_lines = [
    "\\.\\.\\.",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
